@@ -163,7 +163,7 @@ public class InitialQuestionsStep extends AbstractProcessingStep
 
             // Remember that we've removed a thesis in the session
             request.getSession().setAttribute("removed_thesis",
-                    new Boolean(true));
+                    Boolean.TRUE);
 
             return STATUS_THESIS_REJECTED; // since theses are disabled, throw
                                             // an error!
@@ -231,9 +231,9 @@ public class InitialQuestionsStep extends AbstractProcessingStep
             if (willRemoveTitles || willRemoveDate || willRemoveFiles)
             {
                 //save what we will need to prune to request (for UI to process)
-                request.setAttribute("will.remove.titles", new Boolean(willRemoveTitles));
-                request.setAttribute("will.remove.date", new Boolean(willRemoveDate));
-                request.setAttribute("will.remove.files", new Boolean(willRemoveFiles));
+                request.setAttribute("will.remove.titles", Boolean.valueOf(willRemoveTitles));
+                request.setAttribute("will.remove.date", Boolean.valueOf(willRemoveDate));
+                request.setAttribute("will.remove.files", Boolean.valueOf(willRemoveFiles));
                 
                 return STATUS_VERIFY_PRUNE; // we will need to do pruning!
             }
